[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_fritzlabs"
version = "0.0.1"
authors = [
  { name="bsenst", email="bnzn@gmx.net" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bsenst/packaging_tutorial"
Issues = "https://github.com/bsenst/packaging_tutorial/issues"
